--- a/Pro/foxpage.html
+++ b/Pro/foxpage.html
@@ -29,7 +29,8 @@
         </div>
         <!--C:\inetpub\wwwroot\assets\vendors\foxit\web\examples-->
         <!--background-color: #d6dadc;-->
-        <script src="../vendors/foxit/web/examples/license-key.js"></script>
+        <!-- <script src="../vendors/foxit/web/examples/license-key.js"></script> -->
+        <script src="https://rxview360.rasterex.com/assets/vendors/foxit/web/examples/license-key.js"></script>
         <script src="../vendors/foxit/web/lib/PDFViewCtrl.full.js"></script>
         <script src="../scripts/iframefoxit.js"></script>
         <script>
